--- a/contact us.html
+++ b/contact us.html
@@ -3,6 +3,7 @@
 	
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Contact Us</title>
 		<link rel="stylesheet" href="contact us.css">
 	</head>
